changes/michal
