# routes/recipes.js
@@ -22,9 +22,23 @@ router.get("/:recipeId", async (req, res, next) => {
  */
 router.get("/randomRecipes", async (req, res, next) => {
   try {
-    let random_recipes = await recipes_utils.getRandomRecipesAPI(amount);
+    let random_recipes = await recipes_utils.getRandomRecipesAPI(req.query.amount);
     res.status(200).send(random_recipes)
     
+  } catch (error) {
+    next(error);
+  }
+});
+
+/**
+ * This path returns a full details of a recipe by its id
+ */
+router.get("/ExtendedRecipes/:recipeId", async (req, res, next) => {
+  try {
+    const isMyRecipe=req.query.isMyRecipe=='true'
+    const user_id = req.session.user_id; // can be null
+    const recipe = await recipes_utils.getRecipeFullDetails(isMyRecipe,req.params.recipeId, user_id, add_to_seen = true);
+    res.send(recipe);
   } catch (error) {
     next(error);
   }
